--- a/scss/component/_containers.scss
+++ b/scss/component/_containers.scss
@@ -68,8 +68,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 10%;
-  max-height: 100px;
+  height: 5rem;
   text-align: center;
 }
 
@@ -79,11 +78,12 @@ section {
   position: fixed;
   color: #ffffff;
   justify-content: flex-start;
-  top: 4rem;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   border-radius: 5px;
+  height: 5rem;
 }
 
 .notification-overlay {
